[project]
name = "rippl"
version = "0.1.0"
description = "A calm, centralized way of handling meshes and visualizations for FEM simulations"
readme = "README.md"
authors = [
    { name = "Jan Mirco Pfeifer", email = "126580858+janmirco@users.noreply.github.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "gmsh>=4.13.1",
    "numpy>=2.2.5",
    "pyvista>=0.45.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rippl"]
